<resources>
    <string name="app_name">الكرة السحرية</string>
    <string name="title"> لعبة الكرة السحرية </string>
    <string name="subtitle"> سأقرأ أفكارك و كل شيء تقوم به لاتخف يا بني فأنا مجرد لعبة </string>
    <string name="t1"> كيف تلعب </string>
    <string name="text1"> عند بداية اللعبة ستجد جدولا به أعداد من 0 الى 99 و بجانب كل عدد  ستجد رمزا\n  لديك حرية اختيار  أي عدد من 0 الى 99 بعد الاختيار قم بجمع رقمي العدد المختار ثم اطرح المجموع الذي وجدته من العدد الأول  الذي اخترته ستجد عدد كنتيجة اذهب الى ذلك العدد وأنظر الى الرمز الذي بجانبه سأقول لك أي رمز رأيت  </string>
    <string name="ex1">    مثلا : اخترت العدد 25 يتكون من 5 و 2 مجموعهما هو 7 سنطرح العدد 7 من العدد الأول الذي هو 25 سنجد 18 كنتيجة ثم تذهب لتشاهد الرمز الذي بجانب 18  </string>
    <string name="Start"> ابدأ اللعب </string>
    <string name="txtA3">"الرمز الذي شاهدته هو :"</string>
    <string name="replay">أعد اللعب</string>
</resources>
