<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222f3e"
    android:orientation="vertical"
    tools:context="com.example.android.magicball.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#fff"
        android:padding="16dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="#bbb"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000"
        android:padding="8dp"
        android:text="@string/t1"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="15sp"
        android:padding="8dp"
        android:singleLine="false"

        android:text="@string/text1"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:lineSpacingExtra="15sp"
        android:padding="8dp"
        android:text="@string/ex1"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button

        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFF"
        android:onClick="nextIntent"
        android:text="@string/Start"
        android:textColor="#222f3e"
        android:textStyle="bold" />
</LinearLayout>
